--- a/curriculo.html
+++ b/curriculo.html
@@ -1,14 +1,328 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>Curriculo</title>
 </head>
+
 <body>
-    
+    <nav class="navbar nav navbar-expand-lg">
+        <div class=" container">
+            <a class="navbar-brand" href="index.html"><img src="img/logo.png" width="250px"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+
+                <div class="d-flex " role="search">
+                    <ul class=" navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Empregos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Currículos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Classificados</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="noticia.html">Blog</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <main>
+        <div class="container">
+            <!-- Título -->
+            <div class="title text-center mt-5">
+                <h1>Cadastrar um CV</h1>
+            </div>
+
+            <!-- Span mensagem -->
+            <div class="row">
+                <div class="col-12">
+                    <div class="p-2 bg-alert mt-5">
+                        <b>Atenção</b>, cadastro com e-mail inválido ou escrito em caixa alta será descartado. São
+                        permitidos apenas 3 anúncios por usuário.
+                    </div>
+                </div>
+
+                <!-- Primeira linha -->
+                <div class="row mt-4">
+                    <!-- Input nome -->
+                    <div class="col-sm-12 col-md-7 ">
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control rounded-0 border-0 border-bottom" id="nome"
+                                placeholder="Nome:" aria-label="nome" aria-describedby="basic-addon1">
+                        </div>
+                    </div>
+
+                    <!-- Select objetivo -->
+                    <div class="col-sm-12 col-md-5">
+                        <select class="form-select rounded-0 border-0 border-bottom" aria-label="escolha um objetivo"
+                            id="objetivo">
+                            <option class="color-option p-1" selected>Escolha um objetivo</option>
+                            <option class="color-option p-1" value="1"></option>
+                            <option class="color-option p-1" value="2"></option>
+                            <option class="color-option p-1" value="3"></option>
+                            <option class="color-option p-1" value="4"></option>
+                            <option class="color-option p-1" value="5"></option>
+                            <option class="color-option p-1" value="6"></option>
+                            <option class="color-option p-1" value="7"></option>
+                            <option class="color-option p-1" value="8"></option>
+                            <option class="color-option p-1" value="9"></option>
+                            <option class="color-option p-1" value="10"></option>
+                            <option class="color-option p-1" value="11"></option>
+                            <option class="color-option p-1" value="12"></option>
+                            <option class="color-option p-1" value="13"></option>
+                            <option class="color-option p-1" value="14"></option>
+                            <option class="color-option p-1" value="15"></option>
+                            <option class="color-option p-1" value="16"></option>
+                            <option class="color-option p-1" value="17"></option>
+                            <option class="color-option p-1" value="18"></option>
+                            <option class="color-option p-1" value="19"></option>
+                            <option class="color-option p-1" value="20"></option>
+                            <option class="color-option p-1" value="21"></option>
+                            <option class="color-option p-1" value="22"></option>
+                            <option class="color-option p-1" value="23"></option>
+                            <option class="color-option p-1" value="24"></option>
+                            <option class="color-option p-1" value="25"></option>
+                            <option class="color-option p-1" value="26"></option>
+                            <option class="color-option p-1" value="27"></option>
+                            <option class="color-option p-1" value="28"></option>
+                            <option class="color-option p-1" value="29"></option>
+                            <option class="color-option p-1" value="30"></option>
+                            <option class="color-option p-1" value="31"></option>
+                            <option class="color-option p-1" value="32"></option>
+                            <option class="color-option p-1" value="33"></option>
+                            <option class="color-option p-1" value="34"></option>
+                            <option class="color-option p-1" value="35"></option>
+                            <option class="color-option p-1" value="36"></option>
+                            <option class="color-option p-1" value="37"></option>
+                            <option class="color-option p-1" value="38"></option>
+                            <option class="color-option p-1" value="39"></option>
+                            <option class="color-option p-1" value="40"></option>
+                            <option class="color-option p-1" value="41"></option>
+                            <option class="color-option p-1" value="42"></option>
+                            <option class="color-option p-1" value="43"></option>
+                            <option class="color-option p-1" value="44"></option>
+                            <option class="color-option p-1" value="45"></option>
+                            <option class="color-option p-1" value="46"></option>
+                            <option class="color-option p-1" value="47"></option>
+                            <option class="color-option p-1" value="48"></option>
+                            <option class="color-option p-1" value="49"></option>
+                            <option class="color-option p-1" value="50"></option>
+                            <option class="color-option p-1" value="51"></option>
+                            <option class="color-option p-1" value="52"></option>
+                            <option class="color-option p-1" value="53"></option>
+                            <option class="color-option p-1" value="54"></option>
+                            <option class="color-option p-1" value="55"></option>
+                            <option class="color-option p-1" value="56"></option>
+                            <option class="color-option p-1" value="57"></option>
+                            <option class="color-option p-1" value="58"></option>
+                            <option class="color-option p-1" value="59"></option>
+                            <option class="color-option p-1" value="60"></option>
+                            <option class="color-option p-1" value="61"></option>
+                            <option class="color-option p-1" value="62"></option>
+                            <option class="color-option p-1" value="63"></option>
+                            <option class="color-option p-1" value="64"></option>
+                            <option class="color-option p-1" value="65"></option>
+                            <option class="color-option p-1" value="66"></option>
+                            <option class="color-option p-1" value="67"></option>
+                            <option class="color-option p-1" value="68"></option>
+                            <option class="color-option p-1" value="69"></option>
+                            <option class="color-option p-1" value="70"></option>
+                            <option class="color-option p-1" value="71"></option>
+                            <option class="color-option p-1" value="72"></option>
+                            <option class="color-option p-1" value="73"></option>
+                            <option class="color-option p-1" value="74"></option>
+                            <option class="color-option p-1" value="75"></option>
+                            <option class="color-option p-1" value="76"></option>
+                            <option class="color-option p-1" value="77"></option>
+                            <option class="color-option p-1" value="78"></option>
+                            <option class="color-option p-1" value="79"></option>
+                            <option class="color-option p-1" value="80"></option>
+                            <option class="color-option p-1" value="81"></option>
+                            <option class="color-option p-1" value="82"></option>
+                            <option class="color-option p-1" value="83"></option>
+                            <option class="color-option p-1" value="84"></option>
+                            <option class="color-option p-1" value="85"></option>
+                            <option class="color-option p-1" value="86"></option>
+                            <option class="color-option p-1" value="87"></option>
+                            <option class="color-option p-1" value="88"></option>
+                            <option class="color-option p-1" value="89"></option>
+                            <option class="color-option p-1" value="90"></option>
+                            <option class="color-option p-1" value="91"></option>
+                            <option class="color-option p-1" value="92"></option>
+                            <option class="color-option p-1" value="93"></option>
+                            <option class="color-option p-1" value="94"></option>
+                            <option class="color-option p-1" value="95"></option>
+                            <option class="color-option p-1" value="96"></option>
+                            <option class="color-option p-1" value="97"></option>
+                            <option class="color-option p-1" value="98"></option>
+                            <option class="color-option p-1" value="99"></option>
+                            <option class="color-option p-1" value="100"></option>
+                            <option class="color-option p-1" value="101"></option>
+                            <option class="color-option p-1" value="102"></option>
+                            <option class="color-option p-1" value="103"></option>
+                            <option class="color-option p-1" value="104"></option>
+                            <option class="color-option p-1" value="105"></option>
+                            <option class="color-option p-1" value="106"></option>
+                            <option class="color-option p-1" value="107"></option>
+                            <option class="color-option p-1" value="108"></option>
+                            <option class="color-option p-1" value="109"></option>
+                            <option class="color-option p-1" value="110"></option>
+                            <option class="color-option p-1" value="111"></option>
+                            <option class="color-option p-1" value="112"></option>
+                            <option class="color-option p-1" value="113"></option>
+                            <option class="color-option p-1" value="114"></option>
+                            <option class="color-option p-1" value="115"></option>
+                            <option class="color-option p-1" value="116"></option>
+                            <option class="color-option p-1" value="117"></option>
+                            <option class="color-option p-1" value="118"></option>
+                            <option class="color-option p-1" value="119"></option>
+                            <option class="color-option p-1" value="120"></option>
+                            <option class="color-option p-1" value="121"></option>
+                            <option class="color-option p-1" value="122"></option>
+                            <option class="color-option p-1" value="123"></option>
+                            <option class="color-option p-1" value="124"></option>
+                            <option class="color-option p-1" value="125"></option>
+                            <option class="color-option p-1" value="126"></option>
+                            <option class="color-option p-1" value="127"></option>
+                            <option class="color-option p-1" value="128"></option>
+                            <option class="color-option p-1" value="129"></option>
+                            <option class="color-option p-1" value="130"></option>
+                            <option class="color-option p-1" value="131"></option>
+
+
+                        </select>
+                    </div>
+                </div>
+
+                <!-- Segunda linha -->
+                <div class="row mt-4">
+                    <!-- Input Cidade -->
+                    <div class="col-sm-12 col-md-4 ">
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control rounded-0 border-0 border-bottom" id="cidade"
+                                placeholder="Cidade:" aria-label="cidade" aria-describedby="basic-addon1">
+                        </div>
+                    </div>
+
+                    <!-- Input Email -->
+                    <div class="col-sm-12 col-md-8 ">
+                        <div class="input-group mb-3">
+                            <input type="email" class="form-control rounded-0 border-0 border-bottom" id="email"
+                                placeholder="E-mail válido:" aria-label="email" aria-describedby="basic-addon1">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Terceira linha -->
+                <div class="row mt-4">
+                    <!-- Textarea Apresentação -->
+                    <div class="col-12">
+                        <div class="form-floating">
+                            <textarea class="form-control rounded-0 border-0 border-bottom"
+                                placeholder="Apresentação | Informações Complementares"
+                                id="floatingTextarea"></textarea>
+                            <label for="floatingTextarea">Apresentação | Informações Complementares:</label>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Quarta linha -->
+                <div class="row mt-4">
+                    <!-- Textarea qualificações -->
+                    <div class="col-12">
+                        <div class="form-floating">
+                            <textarea class="form-control rounded-0 border-0 border-bottom" placeholder="Qualificações"
+                                id="floatingTextarea"></textarea>
+                            <label for="floatingTextarea">Qualificações:</label>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Quinta linha -->
+                <div class="row mt-4">
+                    <!-- Textarea Formação -->
+                    <div class="col-12">
+                        <div class="form-floating">
+                            <textarea class="form-control rounded-0 border-0 border-bottom" placeholder="Formação"
+                                id="floatingTextarea"></textarea>
+                            <label for="floatingTextarea">Formação:</label>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Sexta linha -->
+                <div class="row mt-4">
+                    <!-- Textarea Experiencia -->
+                    <div class="col-12">
+                        <div class="form-floating">
+                            <textarea class="form-control rounded-0 border-0 border-bottom" placeholder="Experiencia"
+                                id="floatingTextarea"></textarea>
+                            <label for="floatingTextarea">Experiencia:</label>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Botão -->
+                <div class="row">
+                    <div class="col-12 mt-5 text-end ">
+                        <button class="btn btn-primary rounded-0 bg-btn" type="submit">CADASTRAR</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!-- Footer -->
+    <footer class="mt-5">
+        <div class="container">
+            <div class="row text-white p-4">
+                <div class="col-md-4 col-sm-12">
+                    <h4>BLUMENAL ONLINE</h4>
+                    <p>Um portal de oportunidades</p>
+                </div>
+
+                <div class="col-md-4 col-sm-12">
+                    <h4>Anuncie Conosco</h4>
+                    <a class="text-decoration-none text-white" href="#">Danigmichels@gmail.com</a>
+                </div>
+                <div class="col-md-4 col-sm-12">
+                    <h4>Veja Também:</h4>
+                    <ul class="p-0">
+                        <li><a class="text-decoration-none text-white " href="index.html">Home</a></li>
+                        <li><a class="text-decoration-none text-white " href="#">Empregos</a></li>
+                        <li><a class="text-decoration-none text-white " href="#">currículos</a></li>
+                        <li><a class="text-decoration-none text-white " href="#">Classificados</a></li>
+                        <li><a class="text-decoration-none text-white " href="noticia.html">Blog</a></li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+
+        <!-- Direitos autorais -->
+        <div class="row container-fluid text-center text-white bg-direitos p-4">
+            <p>© 2023 Blumenau Online | Todos os direitos reservados.</p>
+        </div>
+    </footer>
 
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
