Commitando index que não tinha ido

--- a/curriculo.html
+++ b/curriculo.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <nav class="navbar nav navbar-expand-lg">
-        <div class=" container">
-            <a class="navbar-brand" href="index.html"><img src="img/logo.png" width="250px"></a>
+    <nav class="navbar nav navbar-expand-lg p-0">
+        <div class=" container ">
+            <a class="navbar-brand" href="#"><img src="img/logo.png" width="250px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -22,21 +22,32 @@
 
                 <div class="d-flex " role="search">
                     <ul class=" navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Empregos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Currículos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Classificados</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="noticia.html">Blog</a>
-                        </li>
+                        <a class="nav-link active d-block btn-nav" aria-current="page" href="index.html">
+                            <li class="nav-item">
+                                Home
+                            </li>
+                        </a>
+                        <a class="nav-link active d-block btn-nav" aria-current="page" href="">
+                            <li class="nav-item">
+                                EMPREGOS
+                            </li>
+                        </a>
+                        <a class="nav-link active d-block btn-nav" aria-current="page" href="">
+                            <li class="nav-item">
+                                CURRÍCULOS
+                            </li>
+                        </a>
+                        <a class="nav-link active d-block btn-nav" aria-current="page" href="">
+                            <li class="nav-item">
+                                CLASSIFICADOS
+                            </li>
+                        </a>
+                        <a class="nav-link active d-block btn-nav" aria-current="page" href="noticia.html">
+                            <li class="nav-item">
+                                BLOG
+                            </li>
+                        </a>
+
                     </ul>
                 </div>
             </div>
