--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
                                 Home
                             </li>
                         </a>
-                        <a class="nav-link active d-block btn-nav" aria-current="page" href="index.html">
+                        <a class="nav-link active d-block btn-nav" aria-current="page" href="">
                             <li class="nav-item">
                                 EMPREGOS
                             </li>
                         </a>
-                        <a class="nav-link active d-block btn-nav" aria-current="page" href="index.html">
+                        <a class="nav-link active d-block btn-nav" aria-current="page" href="">
                             <li class="nav-item">
                                 CURRÍCULOS
                             </li>
                         </a>
-                        <a class="nav-link active d-block btn-nav" aria-current="page" href="index.html">
+                        <a class="nav-link active d-block btn-nav" aria-current="page" href="">
                             <li class="nav-item">
                                 CLASSIFICADOS
                             </li>
                         </a>
-                        <a class="nav-link active d-block btn-nav" aria-current="page" href="index.html">
+                        <a class="nav-link active d-block btn-nav" aria-current="page" href="no">
                             <li class="nav-item">
                                 BLOG
                             </li>
