Arrumando botões da navegação

--- a/curriculo.html
+++ b/curriculo.html
@@ -10,49 +10,50 @@
 </head>
 
 <body>
-    <nav class="navbar nav navbar-expand-lg p-0">
-        <div class=" container ">
-            <a class="navbar-brand" href="#"><img src="img/logo.png" width="250px"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+   <!-- Navegação -->
+   <nav class="navbar nav navbar-expand-lg p-0">
+    <div class=" container ">
+        <a class="navbar-brand" href="#"><img src="img/logo.png" width="250px"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
 
-                <div class="d-flex " role="search">
-                    <ul class=" navbar-nav me-auto mb-2 mb-lg-0">
-                        <a class="nav-link active d-block btn-nav" aria-current="page" href="index.html">
-                            <li class="nav-item">
-                                Home
-                            </li>
-                        </a>
-                        <a class="nav-link active d-block btn-nav" aria-current="page" href="">
-                            <li class="nav-item">
-                                EMPREGOS
-                            </li>
-                        </a>
-                        <a class="nav-link active d-block btn-nav" aria-current="page" href="">
-                            <li class="nav-item">
-                                CURRÍCULOS
-                            </li>
-                        </a>
-                        <a class="nav-link active d-block btn-nav" aria-current="page" href="">
-                            <li class="nav-item">
-                                CLASSIFICADOS
-                            </li>
-                        </a>
-                        <a class="nav-link active d-block btn-nav" aria-current="page" href="noticia.html">
-                            <li class="nav-item">
-                                BLOG
-                            </li>
-                        </a>
+            <div class="d-flex " role="search">
+                <ul class=" navbar-nav me-auto mb-2 mb-lg-0">
+                    <a class="nav-link active d-block btn-nav" aria-current="page" href="index.html">
+                        <li class="nav-item">
+                            Home
+                        </li>
+                    </a>
+                    <a class="nav-link active d-block btn-nav" aria-current="page" href="">
+                        <li class="nav-item">
+                            EMPREGOS
+                        </li>
+                    </a>
+                    <a class="nav-link active d-block btn-nav" aria-current="page" href="">
+                        <li class="nav-item">
+                            CURRÍCULOS
+                        </li>
+                    </a>
+                    <a class="nav-link active d-block btn-nav" aria-current="page" href="">
+                        <li class="nav-item">
+                            CLASSIFICADOS
+                        </li>
+                    </a>
+                    <a class="nav-link active d-block btn-nav" aria-current="page" href="noticia.html">
+                        <li class="nav-item">
+                            BLOG
+                        </li>
+                    </a>
 
-                    </ul>
-                </div>
+                </ul>
             </div>
         </div>
-    </nav>
+    </div>
+</nav>
 
     <main>
         <div class="container">
