--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                 CLASSIFICADOS
                             </li>
                         </a>
-                        <a class="nav-link active d-block btn-nav" aria-current="page" href="no">
+                        <a class="nav-link active d-block btn-nav" aria-current="page" href="noticia.html">
                             <li class="nav-item">
                                 BLOG
                             </li>
