--- a/noticia.html
+++ b/noticia.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!-- Navegação -->
     <nav class="navbar nav navbar-expand-lg p-0">
         <div class=" container ">
             <a class="navbar-brand" href="#"><img src="img/logo.png" width="250px"></a>
